src/test/deca/syntax/valid/non_provided/print_x.deca
// Description:
//    Programme minimaliste utilisant l'initialisation avec affectation
//    et println 
//
// Resultats:
//    x = 1
//
// Historique:
//    cree le 09/01/2020

{
	int x = 1; 
	println("x = ", x);
}
