src/test/deca/syntax/invalid/non_provided/incorrect_soutenance.deca
// Description:
//    Programme minimaliste avec erreur de syntaxe
//    dans l'utilisation de l'instruction 'print'
//
// Resultats:
//    Erreur : 12:10: missing '(' at '"texte"' 
//
// Historique:
//    cree le 15/01/2020

{
    print "texte";
}